# mosaik-heatpump

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  AUTHORS.txt  CHANGES.txt  HP_Air_TESPy.py  HeatLoad.csv  HeatLoad1.csv  HeatLoad3.csv  HeatLoad6.csv  Heat_Pump.py  Heat_Pump_Des.py  Heat_Pump_Model.py  Heat_Pump_mosaik.py  LICENSE  MANIFEST.in  README.md  README.rst  csvschedule_mosaik.py  mosaik_csv_2.py  pyproject.toml  requirements.txt  run.py  run_old.py  setup.py  tox.ini
R0/: Heat_Pump_mosaik.py  run.py
R1/: HeatLoad6.csv  Heat_Pump_Des.py  Heat_Pump_Model.py  run.py
R2/: Heat_Pump_Des.py  Heat_Pump_mosaik.py  mosaik_csv_3.py  requirements.txt  run.py
R3/: COP_m_data.json  Heat_Pump_Model.py
Scenario/: InputData_R2.csv  Szenario_2_mhp_R2_test.py
controller/: controller_mosaik.py
docs/: example_scenarios.rst  index.rst  overview.rst
docs/advanced/: index.rst  step1.rst  step2.rst  step3.rst
docs/examples/: index.rst  sametimeloop.rst  timeshifted.rst
docs/models/: controller.rst  heatpump.rst  hotwatertank.rst  index.rst
docs/source/: conf.py  index.rst  overview.rst
examples/: Scenario_same_time_loop.py  Scenario_time_shifted.py  run_heatpump.py  run_tank.py
heatpump/: Heat_Pump_mosaik.py  data_file.json
hotwatertanksim/: data.csv  hotwatertank.py  hotwatertank_mosaik.py  test_hotwatertank.py
mosaik-heatpump/hotwatertanksim/: hotwatertank.py  hotwatertank_mosaik.py  run_tank.py
mosaik_components/coolingloadsim/: coolingloadsim.py
mosaik_components/heatpump/: Heat_Pump_Design.py  (+3 more)
tests/: test_hotwatertank.py
(+37 files in other folders)
