[tool.poetry]
name = "mosaik-heatpump"
version = "0.2.0"
description = "Mosaik-heatpump provides models for the simulation of heating systems"
authors = ["Pranay Kasturi <mosaik@offis.de>"]
license = "MIT"
readme = "README.rst"
packages = [{ include = "mosaik_components" }]

[tool.poetry.dependencies]
python = ">=3.8,<4"
mosaik-api = ">=3.0"
tespy = ">=0.4.2"
jsonpickle = "^3.0.2"
hplib = "^1.9"

[tool.poetry.group.dev.dependencies]
mosaik = "^3.2.0"
mosaik-csv = "^2.0.0"
mosaik-hdf5 = "^0.4"
pytest = "^7.4.3"
tox = "^4.11.3"

[tool.poetry.group.jupyter.dependencies]
matplotlib = "^3.7.4"
ipykernel = "^6.27.1"
numpy = "^1.24.4"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
